--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "24.2.1",
-    "@types/react": "19.1.9",
-    "@types/react-dom": "19.1.7",
-    "autoprefixer": "10.4.21",
-    "eslint": "9.33.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.4.6"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "next": "15.4.6",
-    "postcss": "8.5.6",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "tailwindcss": "4.1.11",
-    "typescript": "5.9.2"
+    "@eslint/eslintrc": "^3"
   }
 }
