--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "classnames": "^2.5.1",
     "next": "15.4.6",
     "prisma": "^6.14.0",
