--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@next/font": "^14.2.15",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
@@ -17,6 +18,7 @@
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
     "easymde": "^2.20.0",
+    "geist": "^1.4.2",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
